--- a/null-2020.github.io/my-app/src/components/styles/banner.css
+++ b/null-2020.github.io/my-app/src/components/styles/banner.css
@@ -5,5 +5,30 @@
 }
 
 #banner {
-  height: 100vh;
+  width: 100vw;
+  text-align: center;
+}
+
+#background-img {
+  width: 98.9vw;
+  height: 92.1vh;
+}
+
+#banner--text {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+}
+
+#text--top {
+  font-size: 5em;
+}
+
+#text--bottom {
+  font-size: 2.25em;
+}
+
+.container {
+  display: inline-block;
+  vertical-align: middle;
+  line-height: normal;
 }
