--- a/null-2020.github.io/my-app/src/components/styles/banner.css
+++ b/null-2020.github.io/my-app/src/components/styles/banner.css
@@ -27,6 +27,10 @@
   font-size: 2.25em;
 }
 
+/* #button-group {
+  width: 60rem;
+} */
+
 .container {
   display: inline-block;
   vertical-align: middle;
