--- a/null-2020.github.io/my-app/src/components/styles/about.css
+++ b/null-2020.github.io/my-app/src/components/styles/about.css
@@ -5,11 +5,13 @@
 }
 
 #about-me {
-  height: 100vh;
+  width: 100%;
+  height: 70%;
 }
 
 #headshoot {
   width: 200px;
+  height: 200px;
   padding: 0%;
   /* border-radius: 100%; */
 }
